--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "shade",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "homepage": "https://github.com/mobify/shade",
   "authors": [
     "Mobify <jobs@mobify.com>"
@@ -16,9 +16,9 @@
     "./!(src|dist|lib|templates)"
   ],
   "dependencies": {
+    "plugin": "2.0.0",
     "velocity": "1.0.0",
     "requirejs-text": "~2.0.12",
-    "requirejs": "~2.1.14",
-    "bouncefix.js": "~0.3.0"
+    "requirejs": "~2.1.14"
   }
 }
