--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "shade",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "homepage": "https://github.com/mobify/shade",
   "authors": [
     "Mobify <jobs@mobify.com>"
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "plugin": "2.0.0",
-    "velocity": "1.1.0",
+    "mobify-velocity": "1.1.1",
     "requirejs-text": "~2.0.12",
     "requirejs": "~2.1.14"
   }
