--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "plugin": "2.0.0",
-    "mobify-velocity": "https://github.com/mobify/velocity.git#shim-rework",
+    "mobify-velocity": "1.1.2",
     "requirejs-text": "~2.0.12",
     "requirejs": "~2.1.14"
   }
