--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "plugin": "~2.1.0",
     "mobify-velocity": "1.1.2",
     "requirejs-text": "~2.0.12",
-    "requirejs": "~2.1.14"
+    "requirejs": "~2.1.14",
+    "mock-phantom-touch-events": "0.1.0"
   }
 }
