--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mobify-code-style": "0.0.3",
     "grunt-mocha-phantomjs": "~0.3.2",
     "mocha": "~1.14.0",
-    "chai": "~1.9.0"
+    "chai": "~1.9.0",
+    "mock-phantom-touch-events": "0.1.0"
   },
   "license": "MIT"
 }
