--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "grunt-contrib-jshint": "0.10.0",
     "grunt-version": "^0.3.0",
     "jshint": "2.5.0",
-    "grunt-jscs": "~0.7.1",
+    "grunt-jscs": "1.0.0",
     "mobify-code-style": "1.0.0",
     "grunt-mocha-phantomjs": "~0.3.2",
     "mocha": "~1.14.0",
